; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_locks.c_unslide_for_kdebug.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_locks.c_unslide_for_kdebug.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kdebug_enable = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @unslide_for_kdebug(i8* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i32, i32* @kdebug_enable, align 4
  %5 = call i64 @__improbable(i32 %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load i8*, i8** %3, align 8
  %9 = call i64 @VM_KERNEL_UNSLIDE_OR_PERM(i8* %8)
  store i64 %9, i64* %2, align 8
  br label %11

10:                                               ; preds = %1
  store i64 0, i64* %2, align 8
  br label %11

11:                                               ; preds = %10, %7
  %12 = load i64, i64* %2, align 8
  ret i64 %12
}

declare dso_local i64 @__improbable(i32) #1

declare dso_local i64 @VM_KERNEL_UNSLIDE_OR_PERM(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
